--- a/css/body.css
+++ b/css/body.css
@@ -7,9 +7,33 @@
   .container {
     display: flex;
     background-color: rgba(115, 115, 115, 1);
-    border-radius: 0px;
+    height: 100vh;
+
   }
   
-  .common {
-    height: 100vh;
+  .left {   /* 左区域容器 */
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(142, 87, 87);
+    width: 80%;
   }
+ 
+  .left-content {  /* 左下区域容器 */
+    height: 30vh;
+    width: 100%;
+    background-color: rgba(43, 153, 114, 0.436);
+  }
+
+  .right {    /* 右区域容器 */
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(113, 113, 113);
+    width: 20%;
+  }
+  
+  .right-content {    /* 右下区域容器 */
+    display: flex;
+    height: 100vh; margin: 40px; /* 上右下左 */
+    background-color: rgba(195, 199, 69, 0);
+  }
+
