--- a/css/left-bottom.css
+++ b/css/left-bottom.css
@@ -1,6 +1,6 @@
 .L3 {
     height: 30vh;
-    background-color: rgb(160, 98, 23);
+    background-color: rgba(160, 98, 23, 0.644);
   }
 
     .L3-1 {
