--- a/css/left-medium.css
+++ b/css/left-medium.css
@@ -1,6 +1,6 @@
 .L2 {
     height: 40vh;
-    background-color: rgb(137, 31, 31);
+    background-color: rgba(137, 31, 31, 0.337);
   }
 
     .L2-1 {
