--- a/css/body.css
+++ b/css/body.css
@@ -8,30 +8,15 @@
     display: flex;
     background-color: rgba(194, 160, 161, 0.649);
     height: 100vh;
-
   }
+  
+
   
   .left {   /* 左区域容器 */
     display: flex;
     flex-direction: column;
     background-color: rgba(255, 255, 255, 0.386);
-    width: 80%;
+    width: 100%;
+    backdrop-filter: blur(10px); /* 添加模糊效果 */
   }
  
-  .left-content {  /* 左下区域容器 */
-    height: 30vh;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0);
-  }
-
-  .right {    /* 右区域容器 */
-    display: flex;
-    flex-direction: column;
-    width: 20%;
-  }
-  
-  .right-content {    /* 右下区域容器 */
-    display: flex;
-    height: 100vh; margin: 40px; /* 上右下左 */
-  }
-
