--- a/music/progress.css
+++ b/music/progress.css
@@ -1,8 +1,8 @@
 /* 进度条 */
 .progress-container {  /* 进度条容器 */
-    width: 100%;
-    height: 10px;
-    margin: 10px 0;
+    width: 90%;
+    height: 5px;
+    margin: 10px auto;
     background-color: rgba(255, 255, 255, 0.2);
     border-radius: 5px;
     cursor: pointer;
@@ -11,10 +11,8 @@
   
   .progress-bar {  /* 进度条 */
     height: 100%;
-    width: 0;
-    background-color: #b296b4;
+    background-color: #ffffff00;
     border-radius: 5px;
-    transition: width 0.1s ease;
   }
   
   .progress-handle {  /* 进度条拖动把手 */
@@ -23,15 +21,16 @@
     height: 12px;
     top: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgb(150, 86, 214);
+    background-color: rgb(255, 255, 255);
     border-radius: 50%;
     pointer-events: none; /* 确保点击事件穿透到容器 */
   }
 
   .time-info {  /* 时间信息 */
     display: flex;
+    width: 90%; /* 确保时间信息与进度条宽度一致 */
+    margin: auto; /* 居中对齐 */
     justify-content: space-between;
     font-size: 10px;
-    color: rgba(255, 255, 255, 0.8);
-    margin-top: 5px;
+    color: rgba(255, 255, 255, 0.485);
   }
