--- a/layout-content/mobile.css
+++ b/layout-content/mobile.css
@@ -1,30 +1,30 @@
 /* 移动端：2行2列布局 */
 @media (max-width: 768px) {
-    .medium {
+    .content {
       height: auto; /* 允许高度自适应内容 */
       padding: 15px;
     }
     
-    .medium-container {
+    .content-container {
       width: 95%;
       grid-template-columns: repeat(2, 1fr); /* 2列 */
       grid-template-rows: repeat(2, 1fr); /* 2行 */
       gap: 15px; /* 移动端减小间距 */
     }
   
-    .medium-tab1 {
+    .content-tab1 {
       border: 2px solid rgba(169, 169, 169, 0.468);
       border-radius: 0px 20px 20px 20px;  /* 左上右上右下左下 */
     }
-    .medium-tab2 {
+    .content-tab2 {
       border: 2px solid rgba(169, 169, 169, 0.468);
       border-radius: 20px 0px 20px 20px;  
     }
-    .medium-tab3 {
+    .content-tab3 {
       border: 2px solid rgba(169, 169, 169, 0.468);
       border-radius: 20px 20px 20px 0px;  
     }
-    .medium-tab4 {
+    .content-tab4 {
       border: 2px solid rgba(169, 169, 169, 0.468);
       border-radius: 20px 20px 0px 20px;
     }
@@ -33,12 +33,12 @@
   
   /* 超小屏幕 */
   @media (max-width: 480px) {
-    .medium-container {
+    .content-container {
       grid-template-columns: repeat(2, 1fr); /* 2列 */
       grid-template-rows: repeat(2, 1fr); /* 2行 */
     }
     
-    .medium-tab {
+    .content-tab {
       padding-bottom: 70%; /* 矮一点的矩形 */
     }
   }
