--- a/layout-content/content.css
+++ b/layout-content/content.css
@@ -29,6 +29,7 @@
   border: 3px solid rgba(169, 169, 169, 0.468);
   border-radius: 20px 20px 20px 20px;
   background-color: rgba(255, 255, 255, 0.145);
+  backdrop-filter: blur(10px);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   overflow: hidden; /* 确保内容不溢出 */
 }
