--- a/layout-top/mobile.css
+++ b/layout-top/mobile.css
@@ -6,6 +6,10 @@
     font-size: 10px;
     top: 20px;
     left: 20px;
+    backdrop-filter: none;
+    border: none;
+    box-shadow: none;
+    background: none;
 }
 
 .weather {
