--- a/layout-bottom/personal/card.css
+++ b/layout-bottom/personal/card.css
@@ -5,10 +5,10 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(37, 37, 37, 0.5);
+    backdrop-filter: blur(3px);
     justify-content: center;
     align-items: center;
-    z-index: 10;
+    z-index: 100;
   }
   
   .modal-overlay.active {
@@ -21,6 +21,7 @@
     position: relative;
     transform-style: preserve-3d;
     transform-origin: bottom; /* 设置旋转中心为底部 */
+    backdrop-filter: blur(3px);
   }
   
   .box div {
